feat: ui improvements
