# frontend/openapi.json
@@ -893,11 +893,16 @@
           "is_admin": {
             "type": "boolean",
             "title": "Is Admin"
+          },
+          "name": {
+            "type": "string",
+            "title": "Name"
           }
         },
         "type": "object",
         "required": [
-          "is_admin"
+          "is_admin",
+          "name"
         ],
         "title": "ApiMeResponse"
       },
